# XQuant

./: .gitignore  CMakeLists.txt  HPPackClient.cpp  KLineGenerator.hpp  KLineGeneratorTest.cpp  QuantEngine.cpp  QuantEngine.h  README.md  StrategyEngine.hpp  TestStrategy.hpp  XQuant.yml  main.cpp
python/: CalcLatency.py  SMAStrategy.py  StrategyTest.py  engine.py  kline.py
